--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             font-family: 'Tahoma', sans-serif;
             background-color: #008080;
-            background-image: url('https://i.imgur.com/3YXQfHr.jpg');
+            background-image: url('https://imgur.com/gallery/new-wallpaper-kWPMXsM');
             background-size: cover;
             background-position: center;
             height: 100vh;
