--- a/index.html
+++ b/index.html
@@ -337,19 +337,19 @@
     <!-- Desktop Icons -->
     <div class="desktop-icons">
         <div class="desktop-icon" onclick="openWindow('cv')">
-            <img src="https://i.imgur.com/8nLfQyX.png" alt="My CV">
+            <img src="icon1.png" alt="My CV">
             <span>My CV.exe</span>
         </div>
         <div class="desktop-icon" onclick="openWindow('portfolio')">
-            <img src="https://i.imgur.com/8nLfQyX.png" alt="Portfolio">
+            <img src="icon2.png" alt="Portfolio">
             <span>Portfolio.exe</span>
         </div>
         <div class="desktop-icon" onclick="openWindow('contact')">
-            <img src="https://i.imgur.com/8nLfQyX.png" alt="Contact Me">
+            <img src="icon3.png" alt="Contact Me">
             <span>Contact Me.exe</span>
         </div>
         <div class="desktop-icon" onclick="openWindow('skills')">
-            <img src="https://i.imgur.com/8nLfQyX.png" alt="Skills">
+            <img src="icon4.png" alt="Skills">
             <span>Skills.exe</span>
         </div>
     </div>
